@@ -98,12 +98,12 @@ $.fn.editInPlace.defaults = {
 	
 	// All callbacks will have this set to the DOM node of the editor that triggered the callback
 	
-	callback:			null, // function: function to be called when editing is complete; cancels ajax submission to the url param. Prototype: function(idOfEditor, enteredText, orinalHTMLContent, settingsParams, callbacks). The function needs to return the value that should be shown in the dom. Returning undefined means cancel and will restore the dom and trigger an error. callbacks is a dictionary with two functions didStartSaving and didEndSaving() that you can use to tell the inline editor that it should start and stop any saving animations it has configured
+	callback:			null, // function: function to be called when editing is complete; cancels ajax submission to the url param. Prototype: function(idOfEditor, enteredText, orinalHTMLContent, settingsParams, callbacks). The function needs to return the value that should be shown in the dom. Returning undefined means cancel and will restore the dom and trigger an error. callbacks is a dictionary with two functions didStartSaving and didEndSaving() that you can use to tell the inline editor that it should start and stop any saving animations it has configured. Parameter idOfEditor is deprecated, use $(this).attr('id') instead
 	success:			null, // function: this function gets called if server responds with a success. Prototype: function(newEditorContentString)
 	error:				null, // function: this function gets called if server responds with an error. Prototype: function(request)
-	error_sink:			function(idOfEditor, errorString) { alert(errorString); }, // function: gets id of the editor and the error. Make sure the editor has an id, or it will just be undefined. If set to null, no error will be reported
-	preinit:			null, // function: this function gets called after a click on an editable element but before the editor opens. If you return false, the inline editor will not open. Prototype: function(currentDomNode)
-	postclose:			null // function: this function gets called after the inline editor has closed and all values are updated. Prototype: function(currentDomNode)
+	error_sink:			function(idOfEditor, errorString) { alert(errorString); }, // function: gets id of the editor and the error. Make sure the editor has an id, or it will just be undefined. If set to null, no error will be reported. Parameter idOfEditor is deprecated, use $(this).attr('id') instead
+	preinit:			null, // function: this function gets called after a click on an editable element but before the editor opens. If you return false, the inline editor will not open. Prototype: function(currentDomNode). Parameter currentDomNode is deprecated use $(this) instead.
+	postclose:			null // function: this function gets called after the inline editor has closed and all values are updated. Prototype: function(currentDomNode). Parameter currentDomNode is deprecated use $(this) instead.
 };
 
 
